# drone-swarm-orca

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: dev-log.tex
scripts/: build-portable.mjs  capture_screenshots.py  collect-portable.mjs
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/core/: drone.ts  formations.ts  orca.ts  spatialHash.ts  swarm.ts  vec3.ts
src/render/: cameraDirector.ts  droneMesh.ts  postfx.ts  scene.ts  trails.ts
src/ui/: alerts.ts  hud.ts  missionPanel.ts  style.css  telemetry.ts
