[package]
name = "drone-swarm-orca"
version = "1.0.0"
description = "Heterogeneous drone swarm simulation with ORCA collision avoidance"
authors = ["朱华天"]
edition = "2021"

[lib]
name = "drone_swarm_orca_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", default-features = false, features = ["wry"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
